<package>
  <name>database_interface</name>
  <version>0.3.0</version>
  <description>Provides an easy to use and general interface between a SQL
    database and object-oriented C++ code, making it easy to
    encapsulate the conceptual "objects" contained in the database as
    C++ classes.</description>
  <maintainer email="">Matei Ciocarlie and Lorenz Mosenlechner</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/database_interface</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Matei Ciocarlie and Lorenz Mosenlechner</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>common_rosdeps</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>common_rosdeps</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>common_rosdeps</test_depend> -->

<export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lpostgresql_database" cflags="-I${prefix}/include"/>
</export>

</package>