<package>
  <name>student_database</name>
  <version>0.3.0</version>
  <description>Example package for using the database_interface. Contains the
    code used in the database_interface tutorials.</description>
  <maintainer email="matei@willowgarage.com">Matei Ciocarlie</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/student_database</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Matei Ciocarlie</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>database_interface</build_depend>
  <build_depend>roscpp</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>database_interface</run_depend>
  <run_depend>roscpp</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>database_interface</test_depend> -->

</package>
